this one is complicated too many components

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 .App {
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
 }
 
+.listItem {
+  display: flex;
+  align-items: center;
+}
